crates/gardswag/src/snapshots/gardswag__tests__check_regression0.snap
---
source: crates/gardswag/src/main.rs
assertion_line: 340
expression: "main_check(\"0//0\").map_err(|e| e.to_string())"
---
Ok:
  - stmts: []
    term:
      offset: 1
      inner:
        Update:
          orig:
            offset: 0
            inner:
              Integer: 0
          ovrd:
            offset: 3
            inner:
              Integer: 0
  - forall:
      4:
        ty: ~
        oneof: []
        partial_record: {}
        listeners: []
        record_update_info:
          - 5
          - 6
    t:
      Var: 4

