crates/gardswag/src/snapshots/gardswag__tests__chk_hello.snap
---
source: crates/gardswag/src/tests.rs
expression: "main_check(r#\"std.stdio.write(\"Hello world!\\n\");\"#).unwrap()"
---
- - std
  - stdio
  - write
  - plus
  - minus
  - mult
  - eq
  - leq
  - not
  - spawn_thread
  - make_chan
  - send
  - recv
  - chan_send
  - chan_recv
  - None
  - Some
- stmts:
    - offset: 9
      inner:
        Call:
          prim:
            offset: 9
            inner:
              Dot:
                prim:
                  offset: 3
                  inner:
                    Dot:
                      prim:
                        offset: 0
                        inner:
                          Identifier: 1
                        extra:
                          ty:
                            Record:
                              2:
                                Record:
                                  3:
                                    Arrow1:
                                      - Literal: String
                                      - Literal: Unit
                              4:
                                Arrow1:
                                  - Literal: Int
                                  - Arrow1:
                                      - Literal: Int
                                      - Literal: Int
                              5:
                                Arrow1:
                                  - Literal: Int
                                  - Arrow1:
                                      - Literal: Int
                                      - Literal: Int
                              6:
                                Arrow1:
                                  - Literal: Int
                                  - Arrow1:
                                      - Literal: Int
                                      - Literal: Int
                              7:
                                Arrow1:
                                  - Var: 5
                                  - Arrow1:
                                      - Var: 6
                                      - Literal: Bool
                              8:
                                Arrow1:
                                  - Literal: Int
                                  - Arrow1:
                                      - Literal: Int
                                      - Literal: Bool
                              9:
                                Arrow1:
                                  - Literal: Bool
                                  - Literal: Bool
                              10:
                                Arrow1:
                                  - ArrowU:
                                      - Literal: Unit
                                      - Literal: Unit
                                  - Literal: Unit
                              11:
                                Arrow0:
                                  - Literal: Unit
                                  - Record:
                                      12:
                                        ChanSend:
                                          Var: 7
                                      13:
                                        ChanRecv:
                                          Var: 7
                              14:
                                Arrow1:
                                  - Var: 8
                                  - Arrow1:
                                      - ChanSend:
                                          Var: 8
                                      - Literal: Bool
                              15:
                                Arrow1:
                                  - ChanRecv:
                                      Var: 9
                                  - TaggedUnion:
                                      16:
                                        Literal: Unit
                                      17:
                                        Var: 9
                          ident_multi: 0
                      key:
                        offset: 4
                        inner: 2
                        extra: ~
                  extra:
                    ty:
                      Record:
                        3:
                          Arrow1:
                            - Literal: String
                            - Literal: Unit
                    ident_multi: 0
                key:
                  offset: 10
                  inner: 3
                  extra: ~
            extra:
              ty:
                Arrow1:
                  - Literal: String
                  - Literal: Unit
              ident_multi: 0
          arg:
            offset: 16
            inner:
              FormatString:
                - offset: 17
                  inner:
                    PureString: "Hello world!\n"
                  extra:
                    ty:
                      Literal: String
                    ident_multi: 0
            extra:
              ty:
                Literal: String
              ident_multi: 0
      extra:
        ty:
          Literal: Unit
        ident_multi: 0
  term: ~
- forall: []
  forall_args: []
  ty:
    Literal: Unit

