crates/gardswag/src/snapshots/gardswag__tests__error_int_update.snap
---
source: crates/gardswag/src/main.rs
expression: "main_check(\"0//0\").map_err(|e| e.to_string())"
---
Err: "@1: expected record, got Ty{int}"

