crates/gardswag/src/snapshots/gardswag__tests__run_call_blti-2.snap
---
source: crates/gardswag/src/main.rs
assertion_line: 254
expression: main_interp(&x.0)
---
Integer: 2

