crates/gardswag/src/snapshots/gardswag__tests__run_call_blti.snap
---
source: crates/gardswag/src/tests.rs
expression: x
---
- - std
  - plus
  - minus
  - mult
  - eq
  - leq
  - not
  - spawn_thread
  - make_chan
  - send
  - recv
  - chan_send
  - chan_recv
  - None
  - Some
  - stdio
  - write
- stmts: []
  term:
    offset: 20
    inner:
      Call:
        prim:
          offset: 20
          inner:
            Call:
              prim:
                offset: 20
                inner:
                  Dot:
                    prim:
                      offset: 17
                      inner:
                        Identifier: 1
                      extra:
                        ty:
                          Record:
                            2:
                              Arrow1:
                                - Literal: Int
                                - Arrow1:
                                    - Literal: Int
                                    - Literal: Int
                            3:
                              Arrow1:
                                - Literal: Int
                                - Arrow1:
                                    - Literal: Int
                                    - Literal: Int
                            4:
                              Arrow1:
                                - Literal: Int
                                - Arrow1:
                                    - Literal: Int
                                    - Literal: Int
                            5:
                              Arrow1:
                                - Var: 5
                                - Arrow1:
                                    - Var: 6
                                    - Literal: Bool
                            6:
                              Arrow1:
                                - Literal: Int
                                - Arrow1:
                                    - Literal: Int
                                    - Literal: Bool
                            7:
                              Arrow1:
                                - Literal: Bool
                                - Literal: Bool
                            8:
                              Arrow1:
                                - ArrowU:
                                    - Literal: Unit
                                    - Literal: Unit
                                - Literal: Unit
                            9:
                              Arrow0:
                                - Literal: Unit
                                - Record:
                                    10:
                                      ChanSend:
                                        Var: 7
                                    11:
                                      ChanRecv:
                                        Var: 7
                            12:
                              Arrow1:
                                - Var: 8
                                - Arrow1:
                                    - ChanSend:
                                        Var: 8
                                    - Literal: Bool
                            13:
                              Arrow1:
                                - ChanRecv:
                                    Var: 9
                                - TaggedUnion:
                                    14:
                                      Literal: Unit
                                    15:
                                      Var: 9
                            16:
                              Record:
                                17:
                                  Arrow1:
                                    - Literal: String
                                    - Literal: Unit
                        ident_multi: 0
                    key:
                      offset: 21
                      inner: 2
                      extra: ~
                extra:
                  ty:
                    Arrow1:
                      - Literal: Int
                      - Arrow1:
                          - Literal: Int
                          - Literal: Int
                  ident_multi: 0
              arg:
                offset: 26
                inner:
                  Integer: 1
                extra:
                  ty:
                    Literal: Int
                  ident_multi: 0
          extra:
            ty:
              Arrow1:
                - Literal: Int
                - Literal: Int
            ident_multi: 0
        arg:
          offset: 28
          inner:
            Integer: 1
          extra:
            ty:
              Literal: Int
            ident_multi: 0
    extra:
      ty:
        Literal: Int
      ident_multi: 0
- forall: []
  forall_args: []
  ty:
    Literal: Int

