crates/gardswag/src/snapshots/gardswag__tests__run_ctrl_match.snap
---
source: crates/gardswag/src/main.rs
expression: x
---
- stmts: []
  term:
    offset: 0
    inner:
      Match:
        inp:
          offset: 6
          inner:
            Tagged:
              key: this_is_a_variant
              value:
                offset: 25
                inner:
                  Integer: 1
        cases:
          - pat:
              Tagged:
                key:
                  offset: 30
                  inner: this_is_a_variant
                value:
                  Identifier:
                    offset: 48
                    inner: x
            body:
              offset: 56
              inner:
                Call:
                  prim:
                    offset: 56
                    inner:
                      Call:
                        prim:
                          offset: 56
                          inner:
                            Dot:
                              prim:
                                offset: 53
                                inner:
                                  Identifier: std
                              key:
                                offset: 57
                                inner: plus
                        arg:
                          offset: 62
                          inner:
                            Identifier: x
                  arg:
                    offset: 64
                    inner:
                      Integer: 1
- forall: []
  ty:
    Literal: Int

