crates/gardswag/src/snapshots/gardswag__tests__run_fibo-2.snap
---
source: crates/gardswag/src/main.rs
assertion_line: 250
expression: main_interp(&x.0)
---
Integer: 21

