crates/gardswag/src/snapshots/gardswag__tests__run_fibo.snap
---
source: crates/gardswag/src/main.rs
expression: x
---
- stmts: []
  term:
    offset: 17
    inner:
      Let:
        lhs:
          offset: 25
          inner: fib
        rhs:
          offset: 31
          inner:
            Fix:
              arg: fib
              body:
                offset: 31
                inner:
                  Lambda:
                    arg: x
                    body:
                      offset: 34
                      inner:
                        Lambda:
                          arg: y
                          body:
                            offset: 37
                            inner:
                              Lambda:
                                arg: n
                                body:
                                  offset: 40
                                  inner:
                                    Block:
                                      stmts: []
                                      term:
                                        offset: 108
                                        inner:
                                          Let:
                                            lhs:
                                              offset: 112
                                              inner: z
                                            rhs:
                                              offset: 119
                                              inner:
                                                Call:
                                                  prim:
                                                    offset: 119
                                                    inner:
                                                      Call:
                                                        prim:
                                                          offset: 119
                                                          inner:
                                                            Dot:
                                                              prim:
                                                                offset: 116
                                                                inner:
                                                                  Identifier: std
                                                              key:
                                                                offset: 120
                                                                inner: plus
                                                        arg:
                                                          offset: 125
                                                          inner:
                                                            Identifier: x
                                                  arg:
                                                    offset: 127
                                                    inner:
                                                      Identifier: y
                                            rest:
                                              stmts: []
                                              term:
                                                offset: 148
                                                inner:
                                                  If:
                                                    cond:
                                                      offset: 155
                                                      inner:
                                                        Call:
                                                          prim:
                                                            offset: 155
                                                            inner:
                                                              Call:
                                                                prim:
                                                                  offset: 155
                                                                  inner:
                                                                    Dot:
                                                                      prim:
                                                                        offset: 152
                                                                        inner:
                                                                          Identifier: std
                                                                      key:
                                                                        offset: 156
                                                                        inner: leq
                                                                arg:
                                                                  offset: 160
                                                                  inner:
                                                                    Identifier: n
                                                          arg:
                                                            offset: 162
                                                            inner:
                                                              Integer: 0
                                                    then:
                                                      stmts: []
                                                      term:
                                                        offset: 187
                                                        inner:
                                                          Identifier: z
                                                    or_else:
                                                      stmts: []
                                                      term:
                                                        offset: 213
                                                        inner:
                                                          Call:
                                                            prim:
                                                              offset: 213
                                                              inner:
                                                                Call:
                                                                  prim:
                                                                    offset: 213
                                                                    inner:
                                                                      Call:
                                                                        prim:
                                                                          offset: 213
                                                                          inner:
                                                                            Identifier: fib
                                                                        arg:
                                                                          offset: 217
                                                                          inner:
                                                                            Identifier: y
                                                                  arg:
                                                                    offset: 219
                                                                    inner:
                                                                      Identifier: z
                                                            arg:
                                                              offset: 225
                                                              inner:
                                                                Call:
                                                                  prim:
                                                                    offset: 225
                                                                    inner:
                                                                      Call:
                                                                        prim:
                                                                          offset: 225
                                                                          inner:
                                                                            Dot:
                                                                              prim:
                                                                                offset: 222
                                                                                inner:
                                                                                  Identifier: std
                                                                              key:
                                                                                offset: 226
                                                                                inner: minus
                                                                        arg:
                                                                          offset: 232
                                                                          inner:
                                                                            Identifier: n
                                                                  arg:
                                                                    offset: 234
                                                                    inner:
                                                                      Integer: 1
        rest:
          stmts: []
          term:
            offset: 274
            inner:
              Call:
                prim:
                  offset: 274
                  inner:
                    Call:
                      prim:
                        offset: 274
                        inner:
                          Call:
                            prim:
                              offset: 274
                              inner:
                                Identifier: fib
                            arg:
                              offset: 278
                              inner:
                                Integer: 1
                      arg:
                        offset: 280
                        inner:
                          Integer: 1
                arg:
                  offset: 282
                  inner:
                    Integer: 5
- forall: []
  ty:
    Literal: Int

