crates/gardswag/src/snapshots/gardswag__tests__run_fibo0.snap
---
source: crates/gardswag/src/main.rs
assertion_line: 215
expression: main_interp(&x.0)
---
Integer: 2

