crates/gardswag/src/snapshots/gardswag__tests__run_fibo1.snap
---
source: crates/gardswag/src/main.rs
assertion_line: 232
expression: main_interp(&x.0)
---
Integer: 3

